# Korvatovskaya_Sofia_Python_Dz_Itog

./: .gitignore  README.md  constants.py  log_analyzer.py  pyproject.toml  requirements.txt  threat_monitor.py  vulners_client.py
.github/workflows/: tests.yml
logs/: suricata_sample.json
reports/: threat_report.csv  threat_report.json
tests/: test_integration.py  test_log_analyzer.py  test_threat_monitor.py  test_vulners_client.py
